--- a/iletisim.html
+++ b/iletisim.html
@@ -381,7 +381,7 @@
             <div class="col-12">
                 <h3 class="mb-4 text-center"><span class="map-title">Bize</span> <span class="text-danger">Ulaşın</span></h3>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/place/K%C4%B1r%C5%9Fehir,+K%C4%B1r%C5%9Fehir+Merkez%2FK%C4%B1r%C5%9Fehir/@39.1418746,34.0872951,12z/data=!3m1!4b1!4m6!3m5!1s0x14d572c090d21383:0x6dd29199261c3d06!8m2!3d39.146078!4d34.1594989!16zL20vMDU4cWdu?entry=ttu&g_ep=EgoyMDI1MDUxMy4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/place/Cibuti+B%C3%BCy%C3%BCkel%C3%A7ili%C4%9Fi/@39.8545303,32.8491647,17z/data=!3m1!4b1!4m6!3m5!1s0x14d345077d5d3f97:0xec409ebe2525462!8m2!3d39.8545263!4d32.8537781!16s%2Fg%2F11dfld7lyg?entry=ttu&g_ep=EgoyMDI1MDUxMy4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
