--- a/iletisim.html
+++ b/iletisim.html
@@ -381,7 +381,7 @@
             <div class="col-12">
                 <h3 class="mb-4 text-center"><span class="map-title">Bize</span> <span class="text-danger">Ulaşın</span></h3>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/place/Cibuti+B%C3%BCy%C3%BCkel%C3%A7ili%C4%9Fi/@39.8545303,32.8491647,17z/data=!3m1!4b1!4m6!3m5!1s0x14d345077d5d3f97:0xec409ebe2525462!8m2!3d39.8545263!4d32.8537781!16s%2Fg%2F11dfld7lyg?entry=ttu&g_ep=EgoyMDI1MDUxMy4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.279673418732!2d29.02185131541474!3d41.02546297929939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caba5c5a6e5e1d%3A0x5e9a6a2b4a3f3e2d!2sTeknopark%20%C4%B0stanbul!5e0!3m2!1str!2str!4v1620000000000!5m2!1str!2str" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
